.provarCaches/00D410000011HE0EAM/objects/rstk__sowarrusage__c.object
<CustomObject>
    <description>sowarrusage__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__sowarrusage_date__c</fullName>
        <label>Usage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__sowarrusage_sowarr__c</fullName>
        <label>Serialized Item</label>
        <referenceTo>rstk__sowarr__c</referenceTo>
        <relationshipLabel>Device Daily Usage</relationshipLabel>
        <relationshipName>sowarrusages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__sowarrusage_usage1__c</fullName>
        <label>Type 1 Usage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sowarrusage_usage2__c</fullName>
        <label>Type 2 Usage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sowarrusage_usage3__c</fullName>
        <label>Type 3 Usage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Device Daily Usage</label>
    <nameField>
        <label>Device Daily Usage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Device Daily Usage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>